//package Funktion;
//
//public class Position {
//    private int koordY;
//    private int koordX;
//
//    public double getKoordY() {
//        return koordY;
//    }
//
//    public void setKoordY(int koordY) {
//        this.koordY = koordY;
//    }
//
//    public double getKoordX() {
//        return koordX;
//    }
//
//    public void setKoordX(int koordX) {
//        this.koordX = koordX;
//    }
//
//    public Position(int koordY, int koordX) {
//        this.koordY = koordY;
//        this.koordX = koordX;
//    }
//}
