@startuml

skinparam classAttributeIconSize 0

package "Model" {

enum Farbe {
    WEISS
    SCHWARZ
}

class Position {
    - row : int
    - col : int
}

abstract class Figur {
    # position : Position
    # farbe : Farbe
    # bild : Image

    + getMoeglicheZuege(brett : BrettLogik) : List<Position>
}

class Bauer
class Turm
class Springer
class Laeufer
class Dame
class Koenig

Figur <|-- Bauer
Figur <|-- Turm
Figur <|-- Springer
Figur <|-- Laeufer
Figur <|-- Dame
Figur <|-- Koenig

class BrettLogik {
    - felder : Figur[][]
    - aktuellerSpieler : Farbe

    + getFigur(pos : Position) : Figur
    + bewegeFigur(von : Position, nach : Position)
    + istGueltigerZug(von : Position, nach : Position) : boolean
}

BrettLogik --> Figur

}

package "View" {

class BrettPanel {
    - ausgewaehlteFigur : Figur

    + paintComponent(g : Graphics)
}

}

package "Controller" {

class SpielController {
    - brettLogik : BrettLogik
    - brettPanel : BrettPanel

    + mouseClicked(e : MouseEvent)
}

}

BrettPanel --> BrettLogik
SpielController --> BrettLogik
SpielController --> BrettPanel

@enduml